# social-media-app

./: .env  DEPLOYMENT.md  Dockerfile  docker-compose.yml  frontend.py  main.py  pyproject.toml  requirements.txt  test.db
.streamlit/: config.toml  secrets.toml.template
app/: app.py  db.py  schemas.py  users.py
